Lab6/src/parser.output
Terminals unused in grammar

    PUTF
    FOR
    DO


State 176 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Stmts

    2 Stmts: Stmt
    3      | Stmts Stmt

    4 Stmt: AssignStmt
    5     | BlockStmt
    6     | IfStmt
    7     | ReturnStmt
    8     | DeclStmt
    9     | FuncDef
   10     | DeclInitStmt
   11     | WhileStmt
   12     | BreakStmt
   13     | ContinueStmt
   14     | ExprStmt
   15     | FuncDecl

   16 ExprStmt: Exp SEMICOLON

   17 ArrayIndices: LBRACKET ConstExp RBRACKET
   18             | ArrayIndices LBRACKET ConstExp RBRACKET

   19 LVal: ID
   20     | ID ArrayIndices

   21 IdList: IdList COMMA ID
   22       | ID
   23       | ArrInit
   24       | IdList COMMA ArrInit

   25 ConstExpList: ConstExp
   26             | ConstExpList COMMA ConstExp

   27 ArrAssignExp: LBRACE ConstExpList RBRACE
   28             | LBRACE RBRACE

   29 ArrInit: ID ArrayIndices
   30        | ID ArrayIndices ASSIGN ArrAssignExp

   31 InitStmt: ID ASSIGN Exp
   32         | InitStmt COMMA ID ASSIGN Exp
   33         | InitStmt COMMA IdList

   34 ConstDeclInitStmt: CONST Type InitStmt SEMICOLON

   35 DeclInitStmt: Type InitStmt SEMICOLON
   36             | ConstDeclInitStmt

   37 AssignStmt: LVal ASSIGN Exp SEMICOLON

   38 $@1: %empty

   39 BlockStmt: LBRACE $@1 Stmts RBRACE
   40          | LBRACE RBRACE

   41 IfStmt: IF LPAREN Cond RPAREN Stmt
   42       | IF LPAREN Cond RPAREN Stmt ELSE Stmt

   43 BreakStmt: BREAK SEMICOLON

   44 ContinueStmt: CONTINUE SEMICOLON

   45 ReturnStmt: RETURN Exp SEMICOLON

   46 Exp: AddExp

   47 Cond: LOrExp

   48 PrimaryExp: LPAREN Exp RPAREN
   49           | LVal
   50           | INTEGER
   51           | OCTAL
   52           | HEXADECIMAL
   53           | DECIMAL_FLOAT
   54           | HEXADECIMAL_FLOAT

   55 UnaryExp: FuncCall
   56         | PrimaryExp
   57         | ADD UnaryExp
   58         | SUB UnaryExp
   59         | NOT UnaryExp

   60 MulExp: UnaryExp
   61       | MulExp MUL UnaryExp
   62       | MulExp DIV UnaryExp
   63       | MulExp MOD UnaryExp

   64 AddExp: MulExp
   65       | AddExp ADD MulExp
   66       | AddExp SUB MulExp

   67 ConstExp: AddExp

   68 RelExp: AddExp
   69       | RelExp LESS AddExp
   70       | RelExp GREATER AddExp
   71       | RelExp LESSEQUAL AddExp
   72       | RelExp GREATEREQUAL AddExp

   73 EqExp: RelExp
   74      | EqExp EQUAL RelExp
   75      | EqExp NOTEQUAL RelExp

   76 LAndExp: EqExp
   77        | LAndExp AND EqExp

   78 LOrExp: LAndExp
   79       | LOrExp OR LAndExp

   80 Type: INT
   81     | VOID
   82     | FLOAT

   83 ConstDeclStmt: CONST Type IdList SEMICOLON

   84 DeclStmt: ConstDeclStmt
   85         | Type IdList SEMICOLON

   86 WhileStmt: WHILE LPAREN Cond RPAREN Stmt

   87 FuncFParamList: FuncFParam
   88               | FuncFParamList COMMA FuncFParam
   89               | %empty

   90 FuncRParam: Exp
   91           | FuncRParam COMMA Exp
   92           | %empty

   93 FuncFParam: Type ID

   94 FuncHead: Type ID

   95 FuncDecl: FuncHead LPAREN FuncFParamList RPAREN SEMICOLON

   96 $@2: %empty

   97 FuncDef: FuncHead LPAREN FuncFParamList RPAREN $@2 BlockStmt

   98 FuncCall: ID LPAREN FuncRParam RPAREN
   99         | GETINT LPAREN FuncRParam RPAREN
  100         | GETCH LPAREN FuncRParam RPAREN
  101         | GETFLOAT LPAREN FuncRParam RPAREN
  102         | GETARRAY LPAREN FuncRParam RPAREN
  103         | GETFARRAY LPAREN FuncRParam RPAREN
  104         | PUTINT LPAREN FuncRParam RPAREN
  105         | PUTCH LPAREN FuncRParam RPAREN
  106         | PUTFLOAT LPAREN FuncRParam RPAREN
  107         | PUTARRAY LPAREN FuncRParam RPAREN
  108         | PUTFARRAY LPAREN FuncRParam RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <strtype> (258) 19 20 21 22 29 30 31 32 93 94 98
    GETINT <strtype> (259) 99
    GETFLOAT <strtype> (260) 101
    GETARRAY <strtype> (261) 102
    PUTINT <strtype> (262) 104
    PUTFLOAT <strtype> (263) 106
    PUTARRAY <strtype> (264) 107
    PUTFARRAY <strtype> (265) 108
    GETCH <strtype> (266) 100
    GETFARRAY <strtype> (267) 103
    PUTCH <strtype> (268) 105
    PUTF <strtype> (269)
    INTEGER <itype> (270) 50
    OCTAL <itype> (271) 51
    HEXADECIMAL <itype> (272) 52
    DECIMAL_FLOAT <ftype> (273) 53
    HEXADECIMAL_FLOAT <ftype> (274) 54
    IF (275) 41 42
    ELSE (276) 42
    WHILE (277) 86
    FOR (278)
    DO (279)
    BREAK (280) 43
    CONTINUE (281) 44
    INT (282) 80
    VOID (283) 81
    FLOAT (284) 82
    LPAREN (285) 41 42 48 86 95 97 98 99 100 101 102 103 104 105 106 107 108
    RPAREN (286) 41 42 48 86 95 97 98 99 100 101 102 103 104 105 106 107 108
    LBRACE (287) 27 28 39 40
    RBRACE (288) 27 28 39 40
    SEMICOLON (289) 16 34 35 37 43 44 45 83 85 95
    LBRACKET (290) 17 18
    RBRACKET (291) 17 18
    COMMA (292) 21 24 26 32 33 88 91
    AND (293) 77
    OR (294) 79
    EQUAL (295) 74
    NOTEQUAL (296) 75
    LESSEQUAL (297) 71
    GREATEREQUAL (298) 72
    ADD (299) 57 65
    SUB (300) 58 66
    LESS (301) 69
    ASSIGN (302) 30 31 32 37
    GREATER (303) 70
    MUL (304) 61
    DIV (305) 62
    MOD (306) 63
    PLUS (307)
    UMINUS (308)
    NOT (309) 59
    CONST (310) 34 83
    RETURN (311) 45
    THEN (312)


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    Stmts <stmttype> (59)
        on left: 2 3
        on right: 1 3 39
    Stmt <stmttype> (60)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 2 3 41 42 86
    AssignStmt <stmttype> (61)
        on left: 37
        on right: 4
    BlockStmt <stmttype> (62)
        on left: 39 40
        on right: 5 97
    IfStmt <stmttype> (63)
        on left: 41 42
        on right: 6
    ReturnStmt <stmttype> (64)
        on left: 45
        on right: 7
    DeclStmt <stmttype> (65)
        on left: 84 85
        on right: 8
    FuncDef <stmttype> (66)
        on left: 97
        on right: 9
    Exp <exprtype> (67)
        on left: 46
        on right: 16 31 32 37 45 48 90 91
    AddExp <exprtype> (68)
        on left: 64 65 66
        on right: 46 65 66 67 68 69 70 71 72
    Cond <exprtype> (69)
        on left: 47
        on right: 41 42 86
    LOrExp <exprtype> (70)
        on left: 78 79
        on right: 47 79
    PrimaryExp <exprtype> (71)
        on left: 48 49 50 51 52 53 54
        on right: 56
    LVal <exprtype> (72)
        on left: 19 20
        on right: 37 49
    RelExp <exprtype> (73)
        on left: 68 69 70 71 72
        on right: 69 70 71 72 73 74 75
    LAndExp <exprtype> (74)
        on left: 76 77
        on right: 77 78 79
    ConstExp <exprtype> (75)
        on left: 67
        on right: 17 18 25 26
    IdList <exprtype> (76)
        on left: 21 22 23 24
        on right: 21 24 33 83 85
    FuncCall <exprtype> (77)
        on left: 98 99 100 101 102 103 104 105 106 107 108
        on right: 55
    FuncRParam <exprtype> (78)
        on left: 90 91 92
        on right: 91 98 99 100 101 102 103 104 105 106 107 108
    ArrayIndices <exprtype> (79)
        on left: 17 18
        on right: 18 20 29 30
    UnaryExp <exprtype> (80)
        on left: 55 56 57 58 59
        on right: 57 58 59 60 61 62 63
    MulExp <exprtype> (81)
        on left: 60 61 62 63
        on right: 61 62 63 64 65 66
    EqExp <exprtype> (82)
        on left: 73 74 75
        on right: 74 75 76 77
    ConstExpList <exprtype> (83)
        on left: 25 26
        on right: 26 27
    ArrAssignExp <exprtype> (84)
        on left: 27 28
        on right: 30
    InitStmt <stmttype> (85)
        on left: 31 32 33
        on right: 32 33 34 35
    DeclInitStmt <stmttype> (86)
        on left: 35 36
        on right: 10
    ConstDeclStmt <stmttype> (87)
        on left: 83
        on right: 84
    ConstDeclInitStmt <stmttype> (88)
        on left: 34
        on right: 36
    FuncFParam <stmttype> (89)
        on left: 93
        on right: 87 88
    FuncFParamList <stmttype> (90)
        on left: 87 88 89
        on right: 88 95 97
    WhileStmt <stmttype> (91)
        on left: 86
        on right: 11
    BreakStmt <stmttype> (92)
        on left: 43
        on right: 12
    ContinueStmt <stmttype> (93)
        on left: 44
        on right: 13
    ExprStmt <stmttype> (94)
        on left: 16
        on right: 14
    FuncDecl <stmttype> (95)
        on left: 95
        on right: 15
    FuncHead <stmttype> (96)
        on left: 94
        on right: 95 97
    ArrInit <stmttype> (97)
        on left: 29 30
        on right: 23 24
    Type <type> (98)
        on left: 80 81 82
        on right: 34 35 83 85 93 94
    Program (99)
        on left: 1
        on right: 0
    $@1 (100)
        on left: 38
        on right: 39
    $@2 (101)
        on left: 96
        on right: 97


State 0

    0 $accept: . Program $end
    1 Program: . Stmts
    2 Stmts: . Stmt
    3      | . Stmts Stmt
    4 Stmt: . AssignStmt
    5     | . BlockStmt
    6     | . IfStmt
    7     | . ReturnStmt
    8     | . DeclStmt
    9     | . FuncDef
   10     | . DeclInitStmt
   11     | . WhileStmt
   12     | . BreakStmt
   13     | . ContinueStmt
   14     | . ExprStmt
   15     | . FuncDecl
   16 ExprStmt: . Exp SEMICOLON
   19 LVal: . ID
   20     | . ID ArrayIndices
   34 ConstDeclInitStmt: . CONST Type InitStmt SEMICOLON
   35 DeclInitStmt: . Type InitStmt SEMICOLON
   36             | . ConstDeclInitStmt
   37 AssignStmt: . LVal ASSIGN Exp SEMICOLON
   39 BlockStmt: . LBRACE $@1 Stmts RBRACE
   40          | . LBRACE RBRACE
   41 IfStmt: . IF LPAREN Cond RPAREN Stmt
   42       | . IF LPAREN Cond RPAREN Stmt ELSE Stmt
   43 BreakStmt: . BREAK SEMICOLON
   44 ContinueStmt: . CONTINUE SEMICOLON
   45 ReturnStmt: . RETURN Exp SEMICOLON
   46 Exp: . AddExp
   48 PrimaryExp: . LPAREN Exp RPAREN
   49           | . LVal
   50           | . INTEGER
   51           | . OCTAL
   52           | . HEXADECIMAL
   53           | . DECIMAL_FLOAT
   54           | . HEXADECIMAL_FLOAT
   55 UnaryExp: . FuncCall
   56         | . PrimaryExp
   57         | . ADD UnaryExp
   58         | . SUB UnaryExp
   59         | . NOT UnaryExp
   60 MulExp: . UnaryExp
   61       | . MulExp MUL UnaryExp
   62       | . MulExp DIV UnaryExp
   63       | . MulExp MOD UnaryExp
   64 AddExp: . MulExp
   65       | . AddExp ADD MulExp
   66       | . AddExp SUB MulExp
   80 Type: . INT
   81     | . VOID
   82     | . FLOAT
   83 ConstDeclStmt: . CONST Type IdList SEMICOLON
   84 DeclStmt: . ConstDeclStmt
   85         | . Type IdList SEMICOLON
   86 WhileStmt: . WHILE LPAREN Cond RPAREN Stmt
   94 FuncHead: . Type ID
   95 FuncDecl: . FuncHead LPAREN FuncFParamList RPAREN SEMICOLON
   97 FuncDef: . FuncHead LPAREN FuncFParamList RPAREN $@2 BlockStmt
   98 FuncCall: . ID LPAREN FuncRParam RPAREN
   99         | . GETINT LPAREN FuncRParam RPAREN
  100         | . GETCH LPAREN FuncRParam RPAREN
  101         | . GETFLOAT LPAREN FuncRParam RPAREN
  102         | . GETARRAY LPAREN FuncRParam RPAREN
  103         | . GETFARRAY LPAREN FuncRParam RPAREN
  104         | . PUTINT LPAREN FuncRParam RPAREN
  105         | . PUTCH LPAREN FuncRParam RPAREN
  106         | . PUTFLOAT LPAREN FuncRParam RPAREN
  107         | . PUTARRAY LPAREN FuncRParam RPAREN
  108         | . PUTFARRAY LPAREN FuncRParam RPAREN

    ID                 shift, and go to state 1
    GETINT             shift, and go to state 2
    GETFLOAT           shift, and go to state 3
    GETARRAY           shift, and go to state 4
    PUTINT             shift, and go to state 5
    PUTFLOAT           shift, and go to state 6
    PUTARRAY           shift, and go to state 7
    PUTFARRAY          shift, and go to state 8
    GETCH              shift, and go to state 9
    GETFARRAY          shift, and go to state 10
    PUTCH              shift, and go to state 11
    INTEGER            shift, and go to state 12
    OCTAL              shift, and go to state 13
    HEXADECIMAL        shift, and go to state 14
    DECIMAL_FLOAT      shift, and go to state 15
    HEXADECIMAL_FLOAT  shift, and go to state 16
    IF                 shift, and go to state 17
    WHILE              shift, and go to state 18
    BREAK              shift, and go to state 19
    CONTINUE           shift, and go to state 20
    INT                shift, and go to state 21
    VOID               shift, and go to state 22
    FLOAT              shift, and go to state 23
    LPAREN             shift, and go to state 24
    LBRACE             shift, and go to state 25
    ADD                shift, and go to state 26
    SUB                shift, and go to state 27
    NOT                shift, and go to state 28
    CONST              shift, and go to state 29
    RETURN             shift, and go to state 30

    Stmts              go to state 31
    Stmt               go to state 32
    AssignStmt         go to state 33
    BlockStmt          go to state 34
    IfStmt             go to state 35
    ReturnStmt         go to state 36
    DeclStmt           go to state 37
    FuncDef            go to state 38
    Exp                go to state 39
    AddExp             go to state 40
    PrimaryExp         go to state 41
    LVal               go to state 42
    FuncCall           go to state 43
    UnaryExp           go to state 44
    MulExp             go to state 45
    DeclInitStmt       go to state 46
    ConstDeclStmt      go to state 47
    ConstDeclInitStmt  go to state 48
    WhileStmt          go to state 49
    BreakStmt          go to state 50
    ContinueStmt       go to state 51
    ExprStmt           go to state 52
    FuncDecl           go to state 53
    FuncHead           go to state 54
    Type               go to state 55
    Program            go to state 56


State 1

   17 ArrayIndices: . LBRACKET ConstExp RBRACKET
   18             | . ArrayIndices LBRACKET ConstExp RBRACKET
   19 LVal: ID .  [RPAREN, RBRACE, SEMICOLON, RBRACKET, COMMA, AND, OR, EQUAL, NOTEQUAL, LESSEQUAL, GREATEREQUAL, ADD, SUB, LESS, ASSIGN, GREATER, MUL, DIV, MOD]
   20     | ID . ArrayIndices
   98 FuncCall: ID . LPAREN FuncRParam RPAREN

    LPAREN    shift, and go to state 57
    LBRACKET  shift, and go to state 58

    $default  reduce using rule 19 (LVal)

    ArrayIndices  go to state 59


State 2

   99 FuncCall: GETINT . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 60


State 3

  101 FuncCall: GETFLOAT . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 61


State 4

  102 FuncCall: GETARRAY . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 62


State 5

  104 FuncCall: PUTINT . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 63


State 6

  106 FuncCall: PUTFLOAT . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 64


State 7

  107 FuncCall: PUTARRAY . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 65


State 8

  108 FuncCall: PUTFARRAY . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 66


State 9

  100 FuncCall: GETCH . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 67


State 10

  103 FuncCall: GETFARRAY . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 68


State 11

  105 FuncCall: PUTCH . LPAREN FuncRParam RPAREN

    LPAREN  shift, and go to state 69


State 12

   50 PrimaryExp: INTEGER .

    $default  reduce using rule 50 (PrimaryExp)


State 13

   51 PrimaryExp: OCTAL .

    $default  reduce using rule 51 (PrimaryExp)


State 14

   52 PrimaryExp: HEXADECIMAL .

    $default  reduce using rule 52 (PrimaryExp)


State 15

   53 PrimaryExp: DECIMAL_FLOAT .

    $default  reduce using rule 53 (PrimaryExp)


State 16

   54 PrimaryExp: HEXADECIMAL_FLOAT .

    $default  reduce using rule 54 (PrimaryExp)


State 17

   41 IfStmt: IF . LPAREN Cond RPAREN Stmt
   42       | IF . LPAREN Cond RPAREN Stmt ELSE Stmt

    LPAREN  shift, and go to state 70


State 18

   86 WhileStmt: WHILE . LPAREN Cond RPAREN Stmt

    LPAREN  shift, and go to state 71


State 19

   43 BreakStmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 72


State 20

   44 ContinueStmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 21

   80 Type: INT .

    $default  reduce using rule 80 (Type)


State 22

   81 Type: VOID .

    $default  reduce using rule 81 (Type)


State 23

   82 Type: FLOAT .

    $default  reduce using rule 82 (Type)


State 24

   19 LVal: . ID
   20     | . ID ArrayIndices
   46 Exp: . AddExp
   48 PrimaryExp: . LPAREN Exp RPAREN
   48           | LPAREN . Exp RPAREN
   49           | . LVal
   50           | . INTEGER
   51           | . OCTAL
   52           | . HEXADECIMAL
   53           | . DECIMAL_FLOAT
   54           | . HEXADECIMAL_FLOAT
   55 UnaryExp: . FuncCall
   56         | . PrimaryExp
   57         | . ADD UnaryExp
   58         | . SUB UnaryExp
   59         | . NOT UnaryExp
   60 MulExp: . UnaryExp
   61       | . MulExp MUL UnaryExp
   62       | . MulExp DIV UnaryExp
   63       | . MulExp MOD UnaryExp
   64 AddExp: . MulExp
   65       | . AddExp ADD MulExp
   66       | . AddExp SUB MulExp
   98 FuncCall: . ID LPAREN FuncRParam RPAREN
   99         | . GETINT LPAREN FuncRParam RPAREN
  100         | . GETCH LPAREN FuncRParam RPAREN
  101         | . GETFLOAT LPAREN FuncRParam RPAREN
  102         | . GETARRAY LPAREN FuncRParam RPAREN
  103         | . GETFARRAY LPAREN FuncRParam RPAREN
  104         | . PUTINT LPAREN FuncRParam RPAREN
  105         | . PUTCH LPAREN FuncRParam RPAREN
  106         | . PUTFLOAT LPAREN FuncRParam RPAREN
  107         | . PUTARRAY LPAREN FuncRParam RPAREN
  108         | . PUTFARRAY LPAREN FuncRParam RPAREN

    ID                 shift, and go to state 1
    GETINT             shift, and go to state 2
    GETFLOAT           shift, and go to state 3
    GETARRAY           shift, and go to state 4
    PUTINT             shift, and go to state 5
    PUTFLOAT           shift, and go to state 6
    PUTARRAY           shift, and go to state 7
    PUTFARRAY          shift, and go to state 8
    GETCH              shift, and go to state 9
    GETFARRAY          shift, and go to state 10
    PUTCH              shift, and go to state 11
    INTEGER            shift, and go to state 12
    OCTAL              shift, and go to state 13
    HEXADECIMAL        shift, and go to state 14
    DECIMAL_FLOAT      shift, and go to state 15
    HEXADECIMAL_FLOAT  shift, and go to state 16
    LPAREN             shift, and go to state 24
    ADD                shift, and go to state 26
    SUB                shift, and go to state 27
    NOT                shift, and go to state 28

    Exp         go to state 74
    AddExp      go to state 40
    PrimaryExp  go to state 41
    LVal        go to state 75
    FuncCall    go to state 43
    UnaryExp    go to state 44
    MulExp      go to state 45


State 25

   38 $@1: . %empty  [ID, GETINT, GETFLOAT, GETARRAY, PUTINT, PUTFLOAT, PUTARRAY, PUTFARRAY, GETCH, GETFARRAY, PUTCH, INTEGER, OCTAL, HEXADECIMAL, DECIMAL_FLOAT, HEXADECIMAL_FLOAT, IF, WHILE, BREAK, CONTINUE, INT, VOID, FLOAT, LPAREN, LBRACE, ADD, SUB, NOT, CONST, RETURN]
   39 BlockStmt: LBRACE . $@1 Stmts RBRACE
   40          | LBRACE . RBRACE

    RBRACE  shift, and go to state 76

    $default  reduce using rule 38 ($@1)

    $@1  go to state 77


State 26

   19 LVal: . ID
   20     | . ID ArrayIndices
   48 PrimaryExp: . LPAREN Exp RPAREN
   49           | . LVal
   50           | . INTEGER
   51           | . OCTAL
   52           | . HEXADECIMAL
   53           | . DECIMAL_FLOAT
   54           | . HEXADECIMAL_FLOAT
   55 UnaryExp: . FuncCall
   56         | . PrimaryExp
   57         | . ADD UnaryExp
   57         | ADD . UnaryExp
   58         | . SUB UnaryExp
   59         | . NOT UnaryExp
   98 FuncCall: . ID LPAREN FuncRParam RPAREN
   99         | . GETINT LPAREN FuncRParam RPAREN
  100         | . GETCH LPAREN FuncRParam RPAREN
  101         | . GETFLOAT LPAREN FuncRParam RPAREN
  102         | . GETARRAY LPAREN FuncRParam RPAREN
  103         | . GETFARRAY LPAREN FuncRParam RPAREN
  104         | . PUTINT LPAREN FuncRParam RPAREN
  105         | . PUTCH LPAREN FuncRParam RPAREN
  106         | . PUTFLOAT LPAREN FuncRParam RPAREN
  107         | . PUTARRAY LPAREN FuncRParam RPAREN
  108         | . PUTFARRAY LPAREN FuncRParam RPAREN

    ID                 shift, and go to state 1
    GETINT             shift, and go to state 2
    GETFLOAT           shift, and go to state 3
    GETARRAY           shift, and go to state 4
    PUTINT             shift, and go to state 5
    PUTFLOAT           shift, and go to state 6
    PUTARRAY           shift, and go to state 7
    PUTFARRAY          shift, and go to state 8
    GETCH              shift, and go to state 9
    GETFARRAY          shift, and go to state 10
    PUTCH              shift, and go to state 11
    INTEGER            shift, and go to state 12
    OCTAL              shift, and go to state 13
    HEXADECIMAL        shift, and go to state 14
    DECIMAL_FLOAT      shift, and go to state 15
    HEXADECIMAL_FLOAT  shift, and go to state 16
    LPAREN             shift, and go to state 24
    ADD                shift, and go to state 26
    SUB                shift, and go to state 27
    NOT                shift, and go to state 28

    PrimaryExp  go to state 41
    LVal        go to state 75
    FuncCall    go to state 43
    UnaryExp    go to state 78


State 27

   19 LVal: . ID
   20     | . ID ArrayIndices
   48 PrimaryExp: . LPAREN Exp RPAREN
   49           | . LVal
   50           | . INTEGER
   51           | . OCTAL
   52           | . HEXADECIMAL
   53           | . DECIMAL_FLOAT
   54           | . HEXADECIMAL_FLOAT
   55 UnaryExp: . FuncCall
   56         | . PrimaryExp
   57         | . ADD UnaryExp
   58         | . SUB UnaryExp
   58         | SUB . UnaryExp
   59         | . NOT UnaryExp
   98 FuncCall: . ID LPAREN FuncRParam RPAREN
   99         | . GETINT LPAREN FuncRParam RPAREN
  100         | . GETCH LPAREN FuncRParam RPAREN
  101         | . GETFLOAT LPAREN FuncRParam RPAREN
  102         | . GETARRAY LPAREN FuncRParam RPAREN
  103         | . GETFARRAY LPAREN FuncRParam RPAREN
  104         | . PUTINT LPAREN FuncRParam RPAREN
  105         | . PUTCH LPAREN FuncRParam RPAREN
  106         | . PUTFLOAT LPAREN FuncRParam RPAREN
  107         | . PUTARRAY LPAREN FuncRParam RPAREN
  108         | . PUTFARRAY LPAREN FuncRParam RPAREN

    ID                 shift, and go to state 1
    GETINT             shift, and go to state 2
    GETFLOAT           shift, and go to state 3
    GETARRAY           shift, and go to state 4
    PUTINT             shift, and go to state 5
    PUTFLOAT           shift, and go to state 6
    PUTARRAY           shift, and go to state 7
    PUTFARRAY          shift, and go to state 8
    GETCH              shift, and go to state 9
    GETFARRAY          shift, and go to state 10
    PUTCH              shift, and go to state 11
    INTEGER            shift, and go to state 12
    OCTAL              shift, and go to state 13
    HEXADECIMAL        shift, and go to state 14
    DECIMAL_FLOAT      shift, and go to state 15
    HEXADECIMAL_FLOAT  shift, and go to state 16
    LPAREN             shift, and go to state 24
    ADD                shift, and go to state 26
    SUB                shift, and go to state 27
    NOT                shift, and go to state 28

    PrimaryExp  go to state 41
    LVal        go to state 75
    FuncCall    go to state 43
    UnaryExp    go to state 79


State 28

   19 LVal: . ID
   20     | . ID ArrayIndices
   48 PrimaryExp: . LPAREN Exp RPAREN
   49           | . LVal
   50           | . INTEGER
   51           | . OCTAL
   52           | . HEXADECIMAL
   53           | . DECIMAL_FLOAT
   54           | . HEXADECIMAL_FLOAT
   55 UnaryExp: . FuncCall
   56         | . PrimaryExp
   57         | . ADD UnaryExp
   58         | . SUB UnaryExp
   59         | . NOT UnaryExp
   59         | NOT . UnaryExp
   98 FuncCall: . ID LPAREN FuncRParam RPAREN
   99         | . GETINT LPAREN FuncRParam RPAREN
  100         | . GETCH LPAREN FuncRParam RPAREN
  101         | . GETFLOAT LPAREN FuncRParam RPAREN
  102         | . GETARRAY LPAREN FuncRParam RPAREN
  103         | . GETFARRAY LPAREN FuncRParam RPAREN
  104         | . PUTINT LPAREN FuncRParam RPAREN
  105         | . PUTCH LPAREN FuncRParam RPAREN
  106         | . PUTFLOAT LPAREN FuncRParam RPAREN
  107         | . PUTARRAY LPAREN FuncRParam RPAREN
  108         | . PUTFARRAY LPAREN FuncRParam RPAREN

    ID                 shift, and go to state 1
    GETINT             shift, and go to state 2
    GETFLOAT           shift, and go to state 3
    GETARRAY           shift, and go to state 4
    PUTINT             shift, and go to state 5
    PUTFLOAT           shift, and go to state 6
    PUTARRAY           shift, and go to state 7
    PUTFARRAY          shift, and go to state 8
    GETCH              shift, and go to state 9
    GETFARRAY          shift, and go to state 10
    PUTCH              shift, and go to state 11
    INTEGER            shift, and go to state 12
    OCTAL              shift, and go to state 13
    HEXADECIMAL        shift, and go to state 14
    DECIMAL_FLOAT      shift, and go to state 15
    HEXADECIMAL_FLOAT  shift, and go to state 16
    LPAREN             shift, and go to state 24
    ADD                shift, and go to state 26
    SUB                shift, and go to state 27
    NOT                shift, and go to state 28

    PrimaryExp  go to state 41
    LVal        go to state 75
    FuncCall    go to state 43
    UnaryExp    go to state 80


State 29

   34 ConstDeclInitStmt: CONST . Type InitStmt SEMICOLON
   80 Type: . INT
   81     | . VOID
   82     | . FLOAT
   83 ConstDeclStmt: CONST . Type IdList SEMICOLON

    INT    shift, and go to state 21
    VOID   shift, and go to state 22
    FLOAT  shift, and go to state 23

    Type  go to state 81


State 30

   19 LVal: . ID
   20     | . ID ArrayIndices
   45 ReturnStmt: RETURN . Exp SEMICOLON
   46 Exp: . AddExp
   48 PrimaryExp: . LPAREN Exp RPAREN
   49           | . LVal
   50           | . INTEGER
   51           | . OCTAL
   52           | . HEXADECIMAL
   53           | . DECIMAL_FLOAT
   54           | . HEXADECIMAL_FLOAT
   55 UnaryExp: . FuncCall
   56         | . PrimaryExp
   57         | . ADD UnaryExp
   58         | . SUB UnaryExp
   59         | . NOT UnaryExp
   60 MulExp: . UnaryExp
   61       | . MulExp MUL UnaryExp
   62       | . MulExp DIV UnaryExp
   63       | . MulExp MOD UnaryExp
   64 AddExp: . MulExp
   65       | . AddExp ADD MulExp
   66       | . AddExp SUB MulExp
   98 FuncCall: . ID LPAREN FuncRParam RPAREN
   99         | . GETINT LPAREN FuncRParam RPAREN
  100         | . GETCH LPAREN FuncRParam RPAREN
  101         | . GETFLOAT LPAREN FuncRParam RPAREN
  102         | . GETARRAY LPAREN FuncRParam RPAREN
  103         | . GETFARRAY LPAREN FuncRParam RPAREN
  104         | . PUTINT LPAREN FuncRParam RPAREN
  105         | . PUTCH LPAREN FuncRParam RPAREN
  106         | . PUTFLOAT LPAREN FuncRParam RPAREN
  107         | . PUTARRAY LPAREN FuncRParam RPAREN
  108         | . PUTFARRAY LPAREN FuncRParam RPAREN

    ID                 shift, and go to state 1
    GETINT             shift, and go to state 2
    GETFLOAT           shift, and go to state 3
    GETARRAY           shift, and go to state 4
    PUTINT             shift, and go to state 5
    PUTFLOAT           shift, and go to state 6
    PUTARRAY           shift, and go to state 7
    PUTFARRAY          shift, and go to state 8
    GETCH              shift, and go to state 9
    GETFARRAY          shift, and go to state 10
    PUTCH              shift, and go to state 11
    INTEGER            shift, and go to state 12
    OCTAL              shift, and go to state 13
    HEXADECIMAL        shift, and go to state 14
    DECIMAL_FLOAT      shift, and go to state 15
    HEXADECIMAL_FLOAT  shift, and go to state 16
    LPAREN             shift, and go to state 24
    ADD                shift, and go to state 26
    SUB                shift, and go to state 27
    NOT                shift, and go to state 28

    Exp         go to state 82
    AddExp      go to state 40
    PrimaryExp  go to state 41
    LVal        go to state 75
    FuncCall    go to state 43
    UnaryExp    go to state 44
    MulExp      go to state 45


State 31
